@@ -192,6 +192,17 @@
       </locale>
     </schema>
     <schema>
+      <applyto>/desktop/gnome/interface/document_font_name</applyto>
+      <key>/schemas/desktop/gnome/interface/document_font_name</key>
+      <owner>gnome</owner>
+      <type>string</type>
+      <default>Sans 10</default>
+      <locale name="C">
+	<short>Document font</short>
+	<long>Name of the default font used for reading documents</long>
+      </locale>
+    </schema>
+    <schema>
       <applyto>/desktop/gnome/interface/monospace_font_name</applyto>
       <key>/schemas/desktop/gnome/interface/monospace_font_name</key>
       <owner>gnome</owner>
