@@ -1,5 +1,11 @@
 2005-05-11  Kjartan Maraas  <kmaraas@gnome.org>
 
+	* schemas/desktop_gnome_interface.schemas.in:
+	Patch from Shaun McCance to add schemas for document
+	font setting. Closes bug #160453
+
+2005-05-11  Kjartan Maraas  <kmaraas@gnome.org>
+
 	* configure.in: Fix build on ia64. Patch from Sebastien
 	Bacher. Closes bug #148996.
 
